examples/datalog/14_aggregations/36_avg_single_value.dl
% Test: Average of single value
% Expected: Average equals the single value
% Category: 14_aggregations
% Priority: P2 - Aggregation patterns

.kg create test_avg_single
.kg use test_avg_single

+single[(42,)].

avg_result(<AVG:X>) :- single(X).

?- avg_result(A).

.kg use default
.kg drop test_avg_single
